# sine-music-player

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  devenv.nix  flake.nix  shell.nix
src/: callbacks.rs  helpers.rs  main.rs
src/audio_engine/: engine_commands.rs  engine_enums.rs  engine_helpers.rs  engine_status.rs  enums.rs  mod.rs  music.rs  music_data.rs
ui/: main.slint
ui/assets/: icons.slint
ui/assets/icons/: icons.slint
ui/global/: music_control.slint
ui/theme/: dracula.slint
