[package]
name = "sine-music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
lofty = "0.24.0"
rfd = "0.17.2"
rodio = { git="https://github.com/RustAudio/rodio", rev="ee3c21f", features=["symphonia-libopus"]}
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"
