[package]
name = "sine-music-player"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
image = "0.25.10"
lofty = "0.24.0"
rand = "0.10.1"
rfd = "0.17.2"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "ee3c21f", features = ["symphonia-libopus"] }
slint = "1.17.0"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.17.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
